changing background color

--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-  background-color: #E2FBE4;
+  background-color: #eff4f0;
   font-family: font-family: 'Roboto', sans-serif;
   line-height: 15px;
 }
