--- a/style/banner.css
+++ b/style/banner.css
@@ -1,8 +1,9 @@
 .banner {
   background-size: cover;
   background-position: center;
-  padding: 150px 0;
-
+  padding: 150px;
+  background-attachment: fixed;
+  background-repeat: no-repeat;
 
 }
 
@@ -22,5 +23,5 @@
 }
 
 .banner {
-  height: 100%;
+  height: 400px;
 }
