--- a/style/banner.css
+++ b/style/banner.css
@@ -7,7 +7,7 @@
 
 }
 
-.banner h1 {
+.banner-text h1 {
   margin: 0;
   color: white;
   text-shadow: 1px 1px 3px rgba(0,0,0,0.2);
@@ -15,13 +15,13 @@
   font-weight: bold;
 }
 
-.banner p {
+.banner-text p {
   font-size: 20px;
   color: white;
   opacity: .7;
   text-shadow: 1px 1px 3px rgba(0,0,0,0.2);
 }
 
-.banner {
-  height: 400px;
+.banner-text {
+  height: 350px;
 }
