--- a/style/style.css
+++ b/style/style.css
@@ -2,6 +2,10 @@
 @import url("cards.css");
 @import url("banner.css");
 @import url("navbar.css");
+@import url("footer.css");
+@import url("social.css");
+@import url("projects.css");
+
 footer {
   text-align: center;
   margin-top: 25px;
