--- a/style/style.css
+++ b/style/style.css
@@ -12,7 +12,7 @@ footer {
   margin-bottom: 25px;
 }
 body {
-  background-color: #eff4f0;
+  background-color: #8E8E8E;
   font-family: font-family: 'Roboto', sans-serif;
   line-height: 15px;
   padding: 0px;
