--- a/style/banner.css
+++ b/style/banner.css
@@ -8,11 +8,12 @@
 }
 
 .banner-text h1 {
-  margin: 0;
+  margin-top: 50px;
   color: white;
   text-shadow: 1px 1px 3px rgba(0,0,0,0.2);
   font-size: 32px;
   font-weight: bold;
+  top: 200px;
 }
 
 .banner-text p {
@@ -20,8 +21,22 @@
   color: white;
   opacity: .7;
   text-shadow: 1px 1px 3px rgba(0,0,0,0.2);
+  height: 100px;
 }
 
 .banner-text {
   height: 350px;
 }
+.social-media-top, .list-inline-top a {
+  font-size: 15px;
+  padding: 5px;
+  color: #fff;
+  background-color: transparent;
+  height: 10px;
+  opacity: 0.9;
+}
+.social-media-top, .list-inline-top a:hover {
+  color: #ddba77;
+  text-decoration: none;
+}
+
