new botton and black/white image

--- a/style/cards.css
+++ b/style/cards.css
@@ -21,3 +21,27 @@ p {
   font-family: 'Playfair Display', serif;
   color: #EAB464;
 }
+.programming {
+  display: block;
+  position: relative;
+  height: 500px;
+  width: 100%;
+  -webkit-filter: grayscale(100%); /* Safari 6.0 - 9.0 */
+  filter: grayscale(100%);
+}
+.button-holder a {
+  padding: 20px 80px;
+  border: solid white;
+  border-width: 2px;
+  position: absolute;
+  top: 40%;
+  left: 45%;
+  color: white;
+  font-weight: lighter;
+}
+.button-holder a:hover {
+  background-color: #333333;
+  color: white;
+  text-decoration: none;
+  font-family:
+}
