--- a/style/social.css
+++ b/style/social.css
@@ -3,19 +3,27 @@
  background-color: #333333;
  width: 100%;
 }
+.social-media {
+  font-family: 'playfair display', serif;
+}
 
 .hp-projects {
   box-sizing: border-box;
 }
+
 .media-overlay img {
   padding: 0;
   object-fit: cover;
+}
+.snapcarte {
+  background-color: #EB5641;
 }
 
 .p-project h2 {
   margin-top: 80px;
   margin-bottom: 80px;
   font-size: 60px;
+  font-family: 'playfair display', serif;
 }
 .p-project h2:after {
     content: ' ';
@@ -27,5 +35,5 @@
     display: block;
     width: 100px;
     margin: 20px auto;
-    border: 1px solid #e3bbbd;
+    border: 1px solid #ddba77;
   }
