--- a/style/style.css
+++ b/style/style.css
@@ -13,7 +13,6 @@ footer {
 }
 body {
   background-color: #8E8E8E;
-  font-family: font-family: 'Roboto', sans-serif;
   line-height: 15px;
   padding: 0px;
   margin: 0;
@@ -22,7 +21,9 @@ body {
     margin-top: 80px;
   margin-bottom: 80px;
   font-size: 60px;
+  font-family: 'playfair display', serif;
 }
+
 .about-me h2:after {
   content: ' ';
     position: absolute;
@@ -33,9 +34,11 @@ body {
     display: block;
     width: 100px;
     margin: 20px auto;
-    border: 1px solid #e3bbbd;
+    border: 1px solid #ddba77;
 }
-
+.about-me p {
+  color: black;
+ }
 @media (max-width: 960px) {
   /* For a screen < 960px, this CSS will be read */
   .container {
