--- a/style/projects.css
+++ b/style/projects.css
@@ -37,4 +37,31 @@
     margin: 20px auto;
     border: 1px solid #ddba77;
   }
+.cocktail:hover .overlay {opacity: 0.6}{
+  opacity: 1;
+}
+.overlay {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  height: 100%;
+  width: 100%;
+  opacity: 0;
+  transition: .5s ease;
+  background-color: #A2A2A2;
+}
 
+.text {
+  color: white;
+  font-size: 40px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+  text-align: center;
+  font-family: 'playfair display', serif;
+}
