--- a/style/banner.css
+++ b/style/banner.css
@@ -16,6 +16,26 @@
   top: 200px;
 }
 
+.banner-text {
+  width:100%;
+  overflow:hidden;
+}
+.banner-text, p, h1 {
+  animation: banner-text 2s;
+}
+
+@keyframes banner-text {
+  from {
+    margin-left: 100%;
+    width: 300%;
+  }
+
+  to {
+    margin-left: 0%;
+    width: 100%;
+  }
+}
+
 .banner-text p {
   font-size: 20px;
   color: white;
