--- a/style/style.css
+++ b/style/style.css
@@ -6,6 +6,10 @@
 @import url("social.css");
 @import url("projects.css");
 
+html {
+  scroll-behavior: smooth;
+}
+
 footer {
   text-align: center;
   margin-top: 25px;
