--- a/style/banner.css
+++ b/style/banner.css
@@ -60,3 +60,67 @@
   color: #ddba77;
   text-decoration: none;
 }
+@media only screen and (max-width: 600px) {
+  .banner {
+  background-size: cover;
+  background-position: center;
+  padding: 150px;
+  background-attachment: fixed;
+  background-repeat: no-repeat;
+
+}
+
+.banner-text h1 {
+  margin-top: 50px;
+  color: white;
+  text-shadow: 1px 1px 3px rgba(0,0,0,0.2);
+  font-size: 32px;
+  font-weight: bold;
+  top: 200px;
+}
+
+.banner-text {
+  width:100%;
+  overflow:hidden;
+  padding: 100px;
+}
+.banner-text, p, h1 {
+  animation: banner-text 2s;
+}
+
+@keyframes banner-text {
+  from {
+    margin-left: 100%;
+    width: 300%;
+  }
+
+  to {
+    margin-left: 0%;
+    width: 100%;
+  }
+}
+
+.banner-text p {
+  font-size: 20px;
+  color: white;
+  opacity: .7;
+  text-shadow: 1px 1px 3px rgba(0,0,0,0.2);
+  height: 100px;
+}
+
+.banner-text {
+  height: 350px;
+}
+.social-media-top, .list-inline-top a {
+  font-size: 15px;
+  padding: 5px;
+  color: #fff;
+  background-color: transparent;
+  height: 10px;
+  opacity: 0.9;
+}
+.social-media-top, .list-inline-top a:hover {
+  color: #ddba77;
+  text-decoration: none;
+}
+}
