--- a/style/projects.css
+++ b/style/projects.css
@@ -44,7 +44,8 @@
   width: 100%;
   opacity: 0;
   transition: .5s ease;
-  background-color: gray
+  background-color: gray;
+  border-radius: 210px;
 }
 
 .text {
