--- a/style/projects.css
+++ b/style/projects.css
@@ -38,14 +38,14 @@
   position: absolute;
   top: 0;
   bottom: 0;
-  left: 0;
-  right: 0;
+  left: 10;
+  right: 10;
   height: 100%;
-  width: 100%;
+  width: 380px;
   opacity: 0;
   transition: .5s ease;
   background-color: gray;
-  border-radius: 210px;
+
 }
 
 .text {
