--- a/style/social.css
+++ b/style/social.css
@@ -7,7 +7,9 @@
   font-family: 'playfair display', serif;
 }
 .social-media  i {
-padding: 30px;
+padding: 57px;
 }
-
+.wantedly {
+  bottom: 50px;
+}
 
