--- a/style2/style2.css
+++ b/style2/style2.css
@@ -1,6 +1,5 @@
 .split {
   height: 100%;
-  width: 50%;
   position: fixed;
   z-index: 1;
   top: 0;
@@ -11,12 +10,14 @@
 .left {
   left: 0;
   background-color: transparent;
+  width: 60%;
 }
 
 .right {
   right: 0;
   background-color: blue;
   background-size: cover;
+  width: 40%;
 }
 
 .centered {
@@ -29,7 +30,20 @@
 .left,
 .centered,
 .about-section {
-  background-image: url(https://uploads-ssl.webflow.com/601a0bef6a367365b406d7cd/602f4021457b6b505090dd9a_news_s.jpg);
+  /* background-image: url(https://uploads-ssl.webflow.com/601a0bef6a367365b406d7cd/602f4021457b6b505090dd9a_news_s.jpg); */
+  background-color: transparent;
   background-size: cover;
   width: 100%;
+}
+.projects {
+    left: auto;
+    top: auto;
+    right: 0%;
+    bottom: 0%;
+    width: 50%;
+    height: 50vh;
+    background-image: url(https://uploads-ssl.webflow.com/601a0bef6a367365b406d7cd/602f4021457b6b505090dd9a_news_s.jpg);
+    background-position: 50% 50%;
+    background-size: cover;
+}
 }
