--- a/style2/style2.css
+++ b/style2/style2.css
@@ -34,6 +34,7 @@
   background-color: transparent;
   background-size: cover;
   width: 100%;
+  height: 100%;
 }
 
 .row {
@@ -50,13 +51,16 @@
   background-size: cover;
 }
 .about-section {
-  background-color: aqua;
+  background-image: url(https://uploads-ssl.webflow.com/601a0bef6a367365b406d7cd/602f40c3056aac673cdfaa88_story_mobile.jpg);
+}
+.demo {
+  background-image: url(https://uploads-ssl.webflow.com/601a0bef6a367365b406d7cd/602f416a2c6b591af0ac3015_prooduct_s.jpg);
   display: -webkit-box;
   display: -webkit-flex;
   display: -ms-flexbox;
   display: flex;
   width: 70%;
-  height: 200vh;
+  height: 100vh;
   padding-top: 0%;
   padding-right: 0%;
   padding-left: 7%;
@@ -73,4 +77,7 @@
   -webkit-align-items: flex-start;
   -ms-flex-align: start;
   align-items: flex-start;
+}
+body {
+  height: 100%;
 }
