--- a/style2/style2.css
+++ b/style2/style2.css
@@ -15,7 +15,7 @@
 
 .right {
   right: 0;
-  background-color: blue;
+  background-color: white;
   background-size: cover;
   width: 40%;
 }
@@ -80,4 +80,75 @@
 }
 body {
   height: 100%;
+}
+.contact-me {
+  background-image: url(https://uploads-ssl.webflow.com/601a0bef6a367365b406d7cd/602f41e0737ee27d4949dd51_team_s.jpg);
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  width: 70%;
+  height: 100vh;
+  padding-top: 0%;
+  padding-right: 0%;
+  padding-left: 7%;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -webkit-flex-direction: column;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  -webkit-box-align: start;
+  -webkit-align-items: flex-start;
+  -ms-flex-align: start;
+  align-items: flex-start;
+}
+.footer-inside {
+  position: relative;
+  z-index: 9999999;
+  display: flex;
+  width: 70%;
+  height: 10%;
+  padding-right: 16px;
+  padding-left: 16px;
+  background-color: #fff;
+}
+.footer-txt {
+  position: relative;
+  z-index: 99999999999999;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  margin-right: 0px;
+  margin-left: 0px;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
+  font-family: Helveticaneue, sans-serif;
+  color: #333;
+  font-size: 14px;
+  font-weight: 300;
+  letter-spacing: 1px;
+  text-decoration: none;
+}
+.social-link-list {
+  position: absolute;
+  left: 3%;
+  top: auto;
+  right: auto;
+  bottom: 3%;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  padding-bottom: 0px;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
 }
