--- a/style2/style2.css
+++ b/style2/style2.css
@@ -23,7 +23,7 @@
 .centered {
   position: absolute;
   top: 50%;
-  left: 40%;
+  left: 50%;
   transform: translate(-50%, -50%);
   text-align: center;
 }
@@ -136,19 +136,74 @@ body {
   letter-spacing: 1px;
   text-decoration: none;
 }
-.social-link-list {
+#fp-nav {
+  position: fixed;
+  padding-top: 144px;
+  z-index: 99999;
+  top: 25%;
+  right: 80px;
+  text-align: right;
+  opacity: 1;
+}
+#fp-nav ul li a span,
+.fp-slidesNav ul li a span {
+  font-size: 24px;
+  color: #f0f0f0;
+  margin-top: 12px;
+  margin-bottom: 12px;
+  border-radius: 50%;
+  position: static;
+  z-index: 1;
+  text-height: 1.5em;
+  width: 0px;
+  border: 0;
+  background: rgba(0, 0, 0, 0);
+  right: 50%;
+  top: 50%;
+  margin: -2px 0 0 -2px;
+  -webkit-transition: all 0.1s ease-in-out;
+  -moz-transition: all 0.1s ease-in-out;
+  -o-transition: all 0.1s ease-in-out;
+  transition: all 0.1s ease-in-out;
+}
+li {
+  list-style-type: none;
+  text-decoration: none;
+}
+.home-side-menu-link-wrapper {
   position: absolute;
-  left: 3%;
-  top: auto;
-  right: auto;
-  bottom: 3%;
+  left: auto;
+  top: 25%;
+  right: 48px;
+  bottom: 0%;
   display: -webkit-box;
   display: -webkit-flex;
   display: -ms-flexbox;
   display: flex;
-  padding-bottom: 0px;
-  -webkit-box-align: center;
-  -webkit-align-items: center;
-  -ms-flex-align: center;
-  align-items: center;
+  height: 70%;
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  -webkit-box-align: end;
+  -webkit-align-items: flex-end;
+  -ms-flex-align: end;
+  align-items: flex-end;
+}
+
+.home-side-menu-arrow-txt {
+  position: relative;
+  left: 60px;
+  height: 1em;
+  margin-bottom: 120px;
+  -webkit-transform: rotate(270deg);
+  -ms-transform: rotate(270deg);
+  transform: rotate(270deg);
+  font-family: Helveticaneue, sans-serif;
+  color: #333;
+  font-size: 20px;
+  line-height: 1em;
+}
+.home-side-menu-arrow {
+  height: 100%;
 }
