--- a/style2/style2.css
+++ b/style2/style2.css
@@ -36,7 +36,13 @@
   width: 100%;
   height: 100%;
 }
-
+.home-section {
+  background-image: url(https://uploads-ssl.webflow.com/601a0bef6a367365b406d7cd/602f4222bc779500e903d9ca_contact_s.jpg);
+  background-color: transparent;
+  background-size: cover;
+  width: 100%;
+  height: 100%;
+}
 .row {
   padding: 0px;
   margin: 0px;
@@ -145,36 +151,28 @@ body {
   text-align: right;
   opacity: 1;
 }
-#fp-nav ul li a span,
-.fp-slidesNav ul li a span {
-  font-size: 24px;
-  color: #f0f0f0;
-  margin-top: 12px;
-  margin-bottom: 12px;
-  border-radius: 50%;
-  position: static;
-  z-index: 1;
-  text-height: 1.5em;
+
+.active:hover {
+  height: 0px;
   width: 0px;
-  border: 0;
-  background: rgba(0, 0, 0, 0);
-  right: 50%;
-  top: 50%;
-  margin: -2px 0 0 -2px;
-  -webkit-transition: all 0.1s ease-in-out;
-  -moz-transition: all 0.1s ease-in-out;
-  -o-transition: all 0.1s ease-in-out;
-  transition: all 0.1s ease-in-out;
+  border-radius: 100%;
+  font-size: 40px;
+  color: #333;
+  text-height: 1em;
+  margin-top: 0px;
+  margin-bottom: 0px;
+  display: inline;
 }
 li {
   list-style-type: none;
   text-decoration: none;
 }
+
 .home-side-menu-link-wrapper {
   position: absolute;
   left: auto;
   top: 25%;
-  right: 48px;
+  right: 28px;
   bottom: 0%;
   display: -webkit-box;
   display: -webkit-flex;
