--- a/style2/style2.css
+++ b/style2/style2.css
@@ -215,7 +215,13 @@ li {
 .home-side-menu-arrow {
   height: 100%;
 }
-/* #snapcarte-img {
-  width: 300px;
-  height: 300px;
-} */
+.home-section {
+  font-family: Raleway;
+}
+.home-section h2 {
+  font-size: 84px;
+  align-items: left;
+}
+.home-section p {
+  font-size: 64px;
+}
